--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,5 @@
 #root {
-  max-width: 1280px;
-  display: block;
+  /* display: block; */
   box-sizing: border-box;
   padding: 16px;
-}
-
-h1 {
-  text-align: start;
 }
