--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -1,4 +1,8 @@
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  background-color: #3c3c50;
+  height: 50px;
 }
